config/sso/sso-config.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: appsso
  namespace: appsso
spec:
  selector:
    app.kubernetes.io/part-of: authserver
    app.kubernetes.io/component: authorization-server
  ports:
    - port: 80
      targetPort: 8080
