config/sso/sso-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: contour
  name: appsso
  namespace: appsso
spec:
  tls:
    - hosts:
        - appsso.appsso
      secretName: wildcard-cert-tls
  rules:
    - host: appsso.appsso
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: appsso
                port:
                  number: 80
